# Tyro

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Mac-compatibility-build.md  Makefile  README.md  Tyro.cbp  Tyro.depend  Tyro.layout  TyroApp.cpp  TyroApp.h  TyroMac.cbp  TyroMain.cpp  TyroMain.h  Windows-Build.md  cmake.sh  sonar-project.properties
cmake/: FindLibSSH2.cmake
cmake/hunter/: config.cmake
config/: json2c.c  languages.json  scintilla.json  themes.json
include/: jsoncpp.cpp
include/UTF8Strings/: Exception.cpp
include/json/: json.h
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
platform/osx/: Info.plist  tyro.icns
resources/platform/msw/: resource.rc
resources/platform/osx/: Info.plist  tyro.icns
resources/visual_studio/: packages.config
resources/xpm/: clipboard.xpm  close.xpm  copy.xpm  diskette.xpm  document.xpm  file_add.xpm  folder.xpm  scissors.xpm  tyro.xpm
resources/xpm/128/: copy.xpm  cut.xpm  info.xpm  new.xpm  open.xpm  paste.xpm  printer.xpm  process.xpm  save.xpm  search.xpm  search_page.xpm  warning.xpm  zoom_in.xpm  zoom_out.xpm
resources/xpm/24/: address-book-alt.xpm  address-book.xpm  bag.xpm  basket.xpm  beer.xpm  bell.xpm  bitcoin.xpm  book-bookmark.xpm  book.xpm  box-full.xpm  box-in.xpm  box-out.xpm  box.xpm  brick-alt.xpm  brick.xpm  bubble.xpm  bubbles-alt.xpm  bubbles.xpm  building.xpm  bullhorn.xpm  calculator.xpm  calendar-clock.xpm  calendar.xpm  carton.xpm  cat.xpm  clock.xpm  cloud-down.xpm  cloud-sync.xpm  cloud-up.xpm  cloud.xpm  cog.xpm  cogs.xpm  compass.xpm  cone.xpm  copy.xpm  cut.xpm  dashboard-alt.xpm  dashboard.xpm  database.xpm  device-camera.xpm  (+142 more)
resources/xpm/32/: copy.xpm  cut.xpm  info.xpm  new.xpm  open.xpm  paste.xpm  printer.xpm  process.xpm  save.xpm  search.xpm  search_page.xpm  warning.xpm  zoom_in.xpm  zoom_out.xpm
resources/xpm/48/: address-book-alt.xpm  address-book.xpm  bag.xpm  basket.xpm  beer.xpm  bell.xpm  bitcoin.xpm  book-bookmark.xpm  book.xpm  box-full.xpm  box-in.xpm  box-out.xpm  box.xpm  brick-alt.xpm  brick.xpm  bubble.xpm  bubbles-alt.xpm  bubbles.xpm  building.xpm  bullhorn.xpm  calculator.xpm  calendar-clock.xpm  calendar.xpm  carton.xpm  cat.xpm  clock.xpm  cloud-down.xpm  cloud-sync.xpm  cloud-up.xpm  cloud.xpm  cog.xpm  cogs.xpm  compass.xpm  cone.xpm  copy.xpm  cut.xpm  dashboard-alt.xpm  dashboard.xpm  database.xpm  device-camera.xpm  (+142 more)
resources/xpm/64/: copy.xpm  cut.xpm  info.xpm  new.xpm  open.xpm  paste.xpm  printer.xpm  process.xpm  save.xpm  search.xpm  search_page.xpm  warning.xpm  zoom_in.xpm  zoom_out.xpm
resources/xpm/72/: address-book-alt.xpm  address-book.xpm  bag.xpm  basket.xpm  beer.xpm  bell.xpm  bitcoin.xpm  book-bookmark.xpm  book.xpm  box-full.xpm  box-in.xpm  box-out.xpm  box.xpm  brick-alt.xpm  brick.xpm  bubble.xpm  bubbles-alt.xpm  bubbles.xpm  building.xpm  bullhorn.xpm  calculator.xpm  calendar-clock.xpm  calendar.xpm  carton.xpm  cat.xpm  clock.xpm  cloud-down.xpm  cloud-sync.xpm  cloud-up.xpm  cloud.xpm  cog.xpm  cogs.xpm  compass.xpm  cone.xpm  dashboard-alt.xpm  dashboard.xpm  database.xpm  device-camera.xpm  device-computer.xpm  device-drive.xpm  (+129 more)
resources/xpm/96/: address-book-alt.xpm  address-book.xpm  bag.xpm  basket.xpm  beer.xpm  bell.xpm  bitcoin.xpm  book-bookmark.xpm  book.xpm  box-full.xpm  box-in.xpm  box-out.xpm  box.xpm  brick-alt.xpm  brick.xpm  bubble.xpm  bubbles-alt.xpm  bubbles.xpm  building.xpm  bullhorn.xpm  calculator.xpm  (+148 more)
src/: DocFrame.cpp  DocFrame.h  EditPane.cpp  EditPane.h  Main.cpp  Main.h  SFTP.cpp  SFTP.h  TabContainer.h  TyroApp.cpp  TyroApp.h  TyroMain.cpp  TyroMain.h  common.h  definitions.h  wx_common.h
src/base/: SFTP.cpp  SFTP.h
src/network/: SFTP.cpp  SFTP.h
src/settings/: Config.cpp  Config.h  LangConfig.cpp  LangConfig.h  Settings.cpp  Settings.h  ThemeConfig.cpp  ThemeConfig.h
src/widgets/: EditPane.cpp  EditPane.h  EditPaneDefinitions.h  EditorPane.cpp  EditorPane.h  FilePane.cpp  FilePane.h  FileTreePane.cpp  FileTreePane.h  MainFrame.cpp  MainFrame.h  OldFilePane.cc  OldFilePane.hh  PrefFrame.cpp  PrefFrame.h  PrefPane.cpp  PrefPane.h  TabContainer.cpp  TabContainer.h  TyroMenu.cpp  TyroMenu.h  widget.h
tests/: ConfigTest.cpp  LangConfigTest.cpp  SFTPTest.cpp  SFTPest.cpp  ThemeConfigTest.cpp  catch.hpp  main.cpp  runtests.sh
(+10 files in other folders)
